Tools now a thing. Added Expense Tracker.

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,5 +1,5 @@
 {% extends "templates/base.html" %}
-{% block title %}Code, Capitalism, and Cooperation{% endblock %}
+{% block title %}Code, Capitalism, and Cooperation | Articles{% endblock %}
 {% block articles_active %}activ{% endblock %}
 {% block content %}
 <script>
