--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     <h2 class="text-center">Featured Articles</h2>
     <div class="row" id="featured_articles">
     </div>
+    <h2 class="text-center">Featured Tools</h2>
+    <div class="row" id="featured_tools">
+    </div>
 </section>
 <script>
     const featured_articles = document.getElementById("featured_articles");
@@ -18,6 +21,19 @@
         featured_articles.appendChild(articleColumn);
         addEventListener("load", (event) => {
             articleColumn.classList.replace("hide", "show");
+        });
+    }
+
+    const featured_tools = document.getElementById("featured_tools");
+    for (const tool of tools.slice(Math.max(tools.length - 3, 0)).reverse())
+    {
+        const toolColumn = document.createElement("div");
+        toolColumn.classList.add("col-md-4", "hide");
+        const toolCard = generate_card(tool);
+        toolColumn.appendChild(toolCard);
+        featured_tools.appendChild(toolColumn);
+        addEventListener("load", (event) => {
+            toolColumn.classList.replace("hide", "show");
         });
     }
 </script>
