--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                 <li class="nav-item border-end border-start border-top border-bottom border-black col-1">
                     <a class="nav-link {% block articles_active %}{% endblock %} text-center" href="articles.html">Articles</a>
                 </li>
-                <li class="nav-item border-end border-start border-top border-bottom border-black col-1">
+                <li class="nav-item border-end border-top border-bottom border-black col-1">
                     <a class="nav-link {% block tools_active %}{% endblock %} text-center" href="tools.html">Tools</a>
                 </li>
                 <li class="border-top border-bottom border-black col-5"></li>
