--- a/templates/compound_interest_calculator.html
+++ b/templates/compound_interest_calculator.html
@@ -158,8 +158,8 @@
                             <div class="d-flex my-3">
                                 <div class="flex-row">
                                     <label for="deductions" class="form-label fw-bold">Deductions</label>
-                                    <input id="deductions" type="number" step="0.01" class="form-control" min="0" value="27700">
-                                    <div>Your tax deductions. Standard deduction is $13,850 for single, and $27,700 for joint filers.</div>
+                                    <input id="deductions" type="number" step="0.01" class="form-control" min="0" value="29200">
+                                    <div>Your tax deductions. Standard deduction is $14,600 for single, and $29,200 for joint filers.</div>
                                 </div>
                             </div>
                             <p class="fw-bold mb-0">Tax Brackets</p>
@@ -170,31 +170,31 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="10"></td>
-                                        <td><input type="number" min="0" step="0.01" value="22000"></td>
+                                        <td><input type="number" min="0" step="1" value="10"></td>
+                                        <td><input type="number" min="0" step="1" value="23200"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="12"></td>
-                                        <td><input type="number" min="0" step="0.01" value="89450"></td>
+                                        <td><input type="number" min="0" step="1" value="12"></td>
+                                        <td><input type="number" min="0" step="1" value="94300"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="22"></td>
-                                        <td><input type="number" min="0" step="0.01" value="190750"></td>
+                                        <td><input type="number" min="0" step="1" value="22"></td>
+                                        <td><input type="number" min="0" step="1" value="201050"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="24"></td>
-                                        <td><input type="number" min="0" step="0.01" value="364200"></td>
+                                        <td><input type="number" min="0" step="1" value="24"></td>
+                                        <td><input type="number" min="0" step="1" value="383900"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="32"></td>
-                                        <td><input type="number" min="0" step="0.01" value="462500"></td>
+                                        <td><input type="number" min="0" step="1" value="32"></td>
+                                        <td><input type="number" min="0" step="1" value="487450"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="35"></td>
-                                        <td><input type="number" min="0" step="0.01" value="693750"></td>
+                                        <td><input type="number" min="0" step="1" value="35"></td>
+                                        <td><input type="number" min="0" step="1" value="731200"></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="number" min="0" step="0.01" value="37"></td>
+                                        <td><input type="number" min="0" step="1" value="37"></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -368,11 +368,11 @@
         }
 
         for (var year = 1; year <= withdrawTime; ++year) {
-            var withdrawValue = contributionValue - (withdraw * 12 * year);
+            // var withdrawValue = contributionValue - (withdraw * 12 * year);
             futureValue = monthlyCompoundInterest(futureValue, endingInterestRate, -withdraw);
 
             futureValueData.push(futureValue);
-            contributionData.push(withdrawValue);
+            contributionData.push(contributionValue);
             yearsData.push(year + contributionTime);
 
             if (extraChoice == "1") {
@@ -591,16 +591,6 @@
         else if (src.value == "1") {
             extra401KSection.hidden = false;
             incomeInput.required = true;
-
-            const incomeIncreaseSection = document.getElementById("incomeIncreaseSection");
-            const incomeIncrease = document.getElementById("incomeIncrease");
-
-            if (src.value == "0") {
-                incomeIncreaseSection.hidden = true;
-            }
-            else {
-                incomeIncreaseSection.hidden = false;
-            }
         }
     }
 
