--- a/templates/investment_calculator.html
+++ b/templates/investment_calculator.html
@@ -1159,6 +1159,7 @@
                 row.children[1].innerText = USDollar.format(expenses);
                 ++year;
             }
+            WithdrawalStrategy.update_values();
         }
 
         static shift_withdrawal(account, dir) {
