Retirement Accounts Article

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <h2 class="text-center">Featured Articles</h2>
     <div class="row" id="featured_articles">
     </div>
-    <h2 class="text-center">Featured Tools</h2>
+    <h2 class="text-center mt-3">Featured Tools</h2>
     <div class="row" id="featured_tools">
     </div>
 </section>
